<resources>
    <string name="app_name">ParentingHubNew</string>
    <string name="welcome_title">Hai Parents!</string>
    <string name="welcome_about">Selamat datang di Parenting Hub! \nPlatform yang menjawab kebutuhan \nKehamilan dan Parentingmu.</string>
    <string name="enter">Masuk</string>
    <string name="facebook">Lanjutkan dengan Facebook</string>
    <string name="google">Masuk dengan Google</string>
    <string name="do_not_have_account">Belum punya akun? </string>
    <string name="register_now"><u>Daftar Sekarang</u></string>
    <string name="welcome_back">Selamat datang \nkembali!</string>
    <string name="forget_password"><u>Lupa kata sandi?</u></string>
    <string name="complete_personal_data">Lengkapi data diri</string>
    <string name="welcome">Selamat datang!</string>
    <string name="username_or_email">Username atau Email</string>
    <string name="password">Kata Sandi</string>
    <string name="full_address">Tempat Tinggal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="social_media_account">Akun Sosial Media</string>
    <string name="optional">(Opsional)</string>
    <string name="save">Simpan Data</string>
    <string name="remind_me_later">Tidak. Ingatkan saya nanti</string>
    <string name="remind_me_later_underline"><u>Tidak. Ingatkan saya nanti</u></string>
    <string name="yes_i_do">Ya. Saya bersedia</string>
    <string name="kid_register_confirm_text">Kami membutuhkan beberapa data mengenai Parents dan si Kecil untuk meningkatkan pengalaman menggunakan aplikasi Kami agar lebih baik lagi. Apakah Parents bersedia?</string>
    <string name="welcome_parents">Selamat Bergabung Parents!</string>
    <string name="i_am_a_mother">Saya seorang Ibu!</string>
    <string name="i_am_pregnant">Saya sedang hamil!</string>
    <string name="i_am_on_program">Saya masih program</string>
    <string name="previous">Sebelumnya</string>
    <string name="next">Selanjutnya</string>
    <string name="family_getting_bigger">Keluarga semakin ramai dengan \nsi Kecil!</string>
    <string name="how_many_kids">Berapa jumlah anak Anda termasuk dengan \nyang sedang dikandung?</string>
    <string name="registering_the_kid">Apakah Parents bersedia \nmengisi profil si Kecil?</string>
    <string name="parents_one_step_ahead">Yayy! Parents satu langkah \nlebih maju dari yang \nlainnya!</string>
    <string name="remind_me_in">Ingatkan saya dalam</string>
    <string name="three_days">3 Hari</string>
    <string name="seven_days">7 Hari</string>
    <string name="fourteen_days">14 Hari</string>
    <string name="the_kid_is_special">Dia Sangat Spesial!</string>
    <string name="tell_us_about_the_kid">Beritahu Kami tentang si Kecil</string>
    <string name="congrats_parents">Selamat Parents, sebentar lagi akan ada \nkeluarga baru yang bergabung.</string>
    <string name="week">Minggu</string>
    <string name="it_is_twin">Umm, sepertinya ini kembar!</string>
    <string name="the_kid_will_be_in_elementary_school_in">Itu artinya di tahun 2027 \nsi Kecil akan masuk SD!</string>
    <string name="how_do_parents_feels">Bagaimana perasaan Parents \nmengenai perjalanan ini?</string>
    <string name="do_parents_has_partner">Apakah Parents memiliki Partner \ndalam perjalanan ini?</string>
    <string name="me_is_my_own_partner"><u>Diri saya adalah partner saya sendiri!</u></string>
    <string name="i_have_partner">Saya Punya Partner!</string>
    <string name="partner_name">Siapa nama Partner Parents?</string>
    <string name="do_you_want_partner_see_this">Apakah Anda ingin John melihat \nParenting Registry-mu?</string>
    <string name="not_now"><u>Tidak Sekarang.</u></string>
    <string name="yes_sure">Ya, tentu saja!</string>
    <string name="partners_email">Apa alamat E-mail John?</string>
    <string name="save_email">Simpan E-mail</string>
    <string name="last_text_step_eleven">Undangan Parenting Registry-mu sudah \nterkirim! Saat John menerimanya kalian \nbisa membuat Registry bersama. \nSelamat Datang!</string>
    <string name="thank_you">Terima Kasih!</string>
    <string name="thanks_for_participating">Terima kasih parents \ntelah berpartisipasi!</string>
    <string name="search">Cari artikel, video, review atau username</string>
    <string name="article_category">Kategori Artikel</string>
    <string name="see_all">Lihat Semua</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="birthday">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="province">Provinsi</string>
    <string name="city">Kota</string>
    <string name="district">Kecamatan</string>
    <string name="address">Alamat Lengkap</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="account_facebook">Facebook</string>
    <string name="youtube_channel">YouTube Channel</string>
    <string name="blog">Blog</string>
    <string name="postal_code">Kode Pos</string>
    <string name="enter_now"><u>Masuk Sekarang</u></string>
    <string name="tunanetra">Tunanetra</string>
    <string name="tunarungu">Tunarungu</string>
    <string name="tunagrahita">Tunagrahita</string>
    <string name="tunadaksa">Tunadaksa</string>
    <string name="difficulty_learning">Kesulitan Belajar</string>
    <string name="autisme">Autisme</string>
    <string name="article_for_parents">Artikel Untuk Parents</string>
    <string name="testing_name">Rahara Wiseclaw</string>
    <string name="yesterday">Kemarin</string>
    <string name="on_going_event">Acara Yang Sedang Berlangsung</string>
    <string name="most_popular_brands">Brands Terpopuler</string>
    <string name="newest_review">Review Terbaru</string>
    <string name="most_review">Paling Banyak di Review</string>
    <string name="write_review">Tulis Review</string>
    <string name="recommendation_for_parents">Rekomendasi untuk Parents</string>
    <string name="email_address">Alamat E-mail</string>
    <string name="birth_prediction">Prediksi Kelahiran</string>
    <string name="report">Laporkan</string>
    <string name="menu_save">Simpan</string>
    <string name="follow">Ikuti</string>
    <string name="notification">Nyalakan Pemberitahuan</string>
    <string name="copy_link">Salin Tautan</string>
    <string name="share">Bagikan ke...</string>
    <string name="write_comment">Tulis Komentar...</string>
    <string name="dummy_detail_article_title">Siap Hadapi New Normal Dengan Emily Portable Blender, Solusi Hidup Sehat Praktis Anti Ribet</string>
    <string name="detail_content">Halo moms. Apa saja nih yang udah disiapkan untuk menghadapi New Normal ? Sebagai seorang Ibu aku wajib menjaga keluargaku agar tetap menjalankan protokol kesehatan dan pola hidup sehat. Apalagi di masa pandemi seperti sekarang ini. Banyak hal yang bisa dilakukan untuk menerapkan pola hidup sehat agar imun tubuh kita tetap terjaga. Mulai dari berolahraga, meminum asupan vitamin, cukup istirahat dan mengkonsumsi makanan atau minuman sehat. Mengkonsumsi makanan dan minuman sehat ini penting banget ya moms. Apalagi aku masih memiliki anak yang masih balita, jadi aku concern banget untuk mulai membiasakan anakku makan dan minum sehat sedari kecil. Sebagai ibu pekerja, terkadang ngga punya cukup waktu buat nyiapin ini itu ngga moms ? hehe tenang moms ngga sendirian ya, aku pun juga suka gitu. Boro-boro nyiapin smoothies, milkshake atau jus buah, bisa menyediakan sarapan aja udah bersyukur banget. Nah aku sekarang lagi happy banget karena punya solusi baru buat ibu-ibu yang butuh cepat, praktis dan anti ribet untuk menyediakan minuman sehat untuk keluarga nih.</string>
    <string name="read_more">Baca Juga</string>
    <string name="recommend_title_one">Menjalankan Pola Hidup Sehat \nDengan Emily Portable Blender</string>
    <string name="recommend_title_two">Siap Hadapi New Normal \nBersama Emily Portable Blender</string>
    <string name="total_like">128 suka</string>
    <string name="real_price"><strike>Rp 449.000</strike></string>
    <string name="feedback_title">Bagaimana artikel ini menurutmu?</string>
    <string name="article_tag">Tag Artikel :</string>
</resources>