<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.login.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:clipToPadding="false"
        android:layout_gravity="fill_vertical"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_zero">

            <ImageView
                android:id="@+id/ivBgTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_zero"
                android:background="@drawable/ic_circle_page_login"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivTitleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium_large"
                android:background="@drawable/ic_logo_parenting_hub_white"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_medium_large"
                android:background="@drawable/ic_back_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivRightImage"
                android:layout_width="@dimen/login_image_width"
                android:layout_height="@dimen/login_image_height"
                android:layout_marginTop="@dimen/margin_medium_large"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:background="@drawable/ic_family"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivTitleWhite" />

            <TextView
                android:id="@+id/tvTitle"
                android:textAppearance="@style/TextTitleSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_small_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/welcome_back"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivTitleWhite" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:textAppearance="@style/TextBody2Regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_small_large"
                android:layout_margin="@dimen/margin_medium_large"
                android:background="@drawable/bg_edittext_lightblue"
                android:hint="@string/username_or_email"
                android:inputType="text"
                android:padding="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@id/ivRightImage" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_small_large"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:layout_marginBottom="@dimen/margin_medium"
                app:boxBackgroundMode="none"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/etUsername"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorBlueBackground">

                <EditText
                    android:id="@+id/etPassword"
                    android:textAppearance="@style/TextBody2Regular"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_small_large"
                    android:background="@drawable/bg_edittext_lightblue"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/margin_medium"
                    app:layout_constraintTop_toBottomOf="@id/etUsername" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgetPassword"
                android:textAppearance="@style/TextCaptionRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:text="@string/forget_password"
                android:textColor="@color/colorBlueBackground"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiPass" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_small_large"
                android:text="@string/enter"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:textAppearance="@style/TextBody2Bold"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                android:insetTop="@dimen/margin_zero"
                android:insetBottom="@dimen/margin_zero"
                app:backgroundTint="@color/colorBlueBackground"
                app:cornerRadius="@dimen/margin_medium_small"
                app:layout_constraintTop_toBottomOf="@id/tvForgetPassword"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginFacebook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_small_large"
                android:text="@string/facebook"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_small"
                android:textAppearance="@style/TextBody2Bold"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:insetTop="@dimen/margin_zero"
                android:insetBottom="@dimen/margin_zero"
                app:iconTint="@null"
                app:icon="@drawable/ic_facebook_login"
                app:backgroundTint="@color/colorBlueFacebook"
                app:cornerRadius="@dimen/margin_medium_small"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_small_large"
                android:text="@string/google"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginEnd="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_small"
                android:textAppearance="@style/TextBody2Bold"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:background="@drawable/bg_button_blue_google"
                android:insetTop="@dimen/margin_zero"
                android:insetBottom="@dimen/margin_zero"
                app:iconTint="@null"
                app:icon="@drawable/ic_google_login"
                app:backgroundTint="@color/colorBlueGoogle"
                app:cornerRadius="@dimen/margin_medium_small"
                app:layout_constraintTop_toBottomOf="@id/btnLoginFacebook"/>

            <TextView
                android:id="@+id/tvTitle4"
                android:textAppearance="@style/TextCaptionRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="end"
                android:text="@string/do_not_have_account"
                android:textColor="@color/colorText"
                android:layout_marginEnd="@dimen/margin_elevation"
                android:layout_marginBottom="@dimen/margin_medium_large"
                app:layout_constraintEnd_toStartOf="@+id/tvTitle5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/ivBgBottom"
                app:layout_constraintTop_toBottomOf="@id/btnLoginGoogle" />

            <TextView
                android:id="@+id/tvTitle5"
                android:textAppearance="@style/TextCaptionRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/register_now"
                android:textColor="@color/colorBlueBackground"
                android:layout_marginBottom="@dimen/margin_medium_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvTitle4"
                app:layout_constraintBottom_toTopOf="@id/ivBgBottom"
                app:layout_constraintTop_toBottomOf="@id/btnLoginGoogle" />

            <ImageView
                android:id="@+id/ivBgBottom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/ic_rectangle_page_login"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>