<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.register.RegisterKidStep6Fragment">

    <ImageView
        android:id="@+id/ivTop"
        android:layout_width="@dimen/margin_zero"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_circle_page_register_step_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_parentinghub_x_parentingregistry"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium_large"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_large"
        android:layout_marginTop="@dimen/margin_small_large"
        android:background="@drawable/ic_back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBefore"
        android:textAppearance="@style/TextBody2Regular"
        android:textAllCaps="false"
        android:layout_width="@dimen/margin_zero"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:textColor="@color/colorText"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small_medium"
        android:layout_marginBottom="@dimen/margin_small"
        app:backgroundTint="@color/colorLightBlue"
        app:cornerRadius="@dimen/margin_medium_large"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:textAppearance="@style/TextBody2Regular"
        android:textAllCaps="false"
        android:layout_width="@dimen/margin_zero"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="@dimen/margin_small_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorBlueBackground"
        app:cornerRadius="@dimen/margin_medium_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBefore"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rcvFeedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toTopOf="@id/btnBefore"/>

    <TextView
        android:id="@+id/tvTitle"
        android:textAppearance="@style/TextBody1SemiBoldRaleway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_large"
        android:text="@string/how_do_parents_feels"
        android:textColor="@color/colorBlueBackground"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTop"
        android:layout_gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>